--- a/pom.xml
+++ b/pom.xml
@@ -21,11 +21,16 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
-
 		<dependency>
 			<groupId>com.github.cloudfoundry-community</groupId>
 			<artifactId>cf-spring</artifactId>
 			<version>0.2-SNAPSHOT</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.github.cloudfoundry-community</groupId>
+			<artifactId>nats-client-spring</artifactId>
+			<version>0.6-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
