Added client token provider config. Cleaned up config in main.

--- a/src/main/resources/service-broker.yml
+++ b/src/main/resources/service-broker.yml
@@ -10,3 +10,11 @@ host:
   local: 127.0.0.1
   public: service-broker-example.app2-dev.lds.org
   port: 8080
+
+cloud_controller_url: https://api.app2-dev.lds.org
+
+client:
+  name: servicegateway
+  secret: gatewaysecret
+
+serviceAuthToken: ssshhhThisIsASecret
